--- a/blog/traitor_commander_round_1_fig.tex
+++ b/blog/traitor_commander_round_1_fig.tex
@@ -28,7 +28,7 @@ $\gen{0}$ sends its chosen messages to the lieutenants.
     \draw[messageR] (g0) -- (g5) node[midway, above, sloped, black]{\cmdR}; % G0 to G5 (Loyal)
     \draw[messageA] (g0) -- (g6) node[midway, above, sloped, black]{\cmdA}; % G0 to G6 (Loyal)
 \end{tikzpicture}
-\caption{Round 1: Traitor Commander $\gen{0}$ sends messages.}
+\caption{Round 1: Traitor Commander $\gen{0}$ sends inconsistent messages to different lieutenants.}
 
 \begin{center}
 \vspace{1em} % Add some vertical space
