--- a/blog/traitor_commander_round_2_fig.tex
+++ b/blog/traitor_commander_round_2_fig.tex
@@ -54,7 +54,7 @@ In the second round, each lieutenant shares with all other lieutenants what they
         \draw[messageR] (g1) -- (g6a) node[midway, above, sloped, black]{\cmdR};
     \end{scope}
 \end{tikzpicture}
-\caption{Round 2: Lieutenants exchange what they received from the commander. Traitor $\gen{1}$ sends conflicting messages.}
+\caption{Round 2: Lieutenants exchange information about what they received from the commander. Traitor lieutenant $\gen{1}$ deliberately sends conflicting messages to different receivers.}
 \end{figure}
 
 % --- Step 1: Typeset the main data table into a savebox to measure its dimensions ---
