fixes re-definition

--- a/blog/main.tex
+++ b/blog/main.tex
@@ -12,6 +12,7 @@
 \usepackage[table]{xcolor}
 \usepackage{array, rotating, colortbl, booktabs}
 \usepackage{adjustbox}
+\usepackage{caption}
 \newcommand{\cmdA}{\ensuremath{\mathsf{A}}} % Command: Attack
 \newcommand{\cmdR}{\ensuremath{\mathsf{R}}} % Command: Retreat
 \newcommand{\loyal}{\ensuremath{\mathcal{L}}}
