--- a/blog/loyal_commander_traitor_round_2_fig.tex
+++ b/blog/loyal_commander_traitor_round_2_fig.tex
@@ -81,7 +81,8 @@
 
 % --- Step 4: Assemble the labels and table using adjustbox for vertical centering ---
 
-
+\newlength{\labelcolwidth} % Define a new length
+\settowidth{\labelcolwidth}{\textbf{Majority}} % Set it to the width of "Majority"
 
 \begin{tabular}{@{}c@{\hspace{1em}}c@{}}
   \adjustbox{valign=c}{% Vertically center the entire label column box
@@ -124,8 +125,9 @@
     & & & & & \cellcolor{yellow!30}\textbf{\textcolor{blue}{\cmdA}} \\
     \hline
 \end{tabular}
+\end{center}
+
 \par\vspace{0.3em}
 {\scriptsize
 After Round 2, each loyal lieutenant can determine the consensus by taking a majority vote of all reported values. Despite the traitors contradicting the commander's message, all loyal lieutenants reach the same conclusion: Attack (A), which matches the loyal commander's original order.
 }
-\end{center}
