fixes minor errors

--- a/blog/loyal_commander_round_1_fig.tex
+++ b/blog/loyal_commander_round_1_fig.tex
@@ -5,7 +5,6 @@
 \tikzstyle{nodeLabel} = [font=\scriptsize, right=1pt]
 
 % Round 1 Figure
-$\gen{0}$ sends its chosen message to all lieutenants.
 \begin{figure}[htb]
 \centering
 \begin{tikzpicture}[scale=1, transform shape]
@@ -28,7 +27,7 @@ $\gen{0}$ sends its chosen message to all lieutenants.
     \draw[messageA] (g0) -- (g5) node[midway, above, sloped, black]{\cmdA}; % G0 to G5
     \draw[messageA] (g0) -- (g6) node[midway, above, sloped, black]{\cmdA}; % G0 to G6
 \end{tikzpicture}
-\caption{Round 1: Loyal Commander $\gen{0}$ sends consistent Attack messages to all lieutenants, demonstrating the validity condition of the algorithm.}
+\caption{Round 1: Loyal Commander $\gen{0}$ sends consistent Attack messages to all lieutenants.}
 
 \begin{center}
 \vspace{1em} % Add some vertical space
